// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Platform/Webex Member Muted 1`] = `
Array [
  <div
    className="wxc-member"
  >
    <div
      className="md-avatar md-avatar--medium"
      title="Giacomo Edwards"
    >
      <span
        className="md-avatar__letter"
        style={
          Object {
            "backgroundColor": "",
            "color": "",
          }
        }
      >
        GE
      </span>
      <img
        alt="Giacomo Edwards"
        className="md-avatar__img md-avatar__img--hidden"
        draggable={false}
        onError={[Function]}
        onLoad={[Function]}
        src="./images/giacomo.png"
      />
    </div>
    <div
      className="member-name"
    >
      <div>
        Giacomo Edwards
      </div>
    </div>
    <div
      className="member-muted"
    >
      <span
        className="icon icon-microphone-muted_24"
      />
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Space 1`] = `
Array [
  <div
    className="wxc-member"
  >
    <div
      className="md-avatar md-avatar--medium"
      title="Barbara German"
    >
      <span
        className="md-avatar__letter"
        style={
          Object {
            "backgroundColor": "",
            "color": "",
          }
        }
      >
        BG
      </span>
      <img
        alt="Barbara German"
        className="md-avatar__img md-avatar__img--hidden"
        draggable={false}
        onError={[Function]}
        onLoad={[Function]}
        src="./images/barbara.png"
      />
    </div>
    <div
      className="member-name"
    >
      <div>
        Barbara German
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Platform/Webex Member Status Enabled 1`] = `
Array [
  <div
    className="wxc-member"
  >
    <div
      className="md-avatar md-avatar--dnd md-avatar--medium"
      title="Barbara German"
    >
      <span
        className="md-avatar__letter"
        style={
          Object {
            "backgroundColor": "",
            "color": "",
          }
        }
      >
        BG
      </span>
      <img
        alt="Barbara German"
        className="md-avatar__img md-avatar__img--hidden"
        draggable={false}
        onError={[Function]}
        onLoad={[Function]}
        src="./images/barbara.png"
      />
    </div>
    <div
      className="member-name"
    >
      <div>
        Barbara German
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
]
`;
